--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <CodeAnalysisRuleSet>..\Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+    <ProjectReference Include="..\DeviceLib.SensorOmron\DeviceLib.SensorOmron.csproj" />
   </ItemGroup>
 
 </Project>
